--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,9 @@ uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
 black = "^24.1.1"
 pytest = "^8.0.0"
 flake8 = "^7.0.0"
+isort = "^5.13.2"
+mypy = "^1.8.0"
+pre-commit = "^3.6.0"
 
 [build-system]
 requires = ["poetry-core"]
