--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.12"
 fastapi = "^0.109.0"
 uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
+sqlalchemy = "^2.0.27"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -19,6 +20,13 @@ flake8 = "^7.0.0"
 isort = "^5.13.2"
 mypy = "^1.8.0"
 pre-commit = "^3.6.0"
+
+[tool.isort]
+profile = "black"
+
+[flake8]
+max-line-length = "88"
+extend-ignore = "E203,E701"
 
 [build-system]
 requires = ["poetry-core"]
