--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [tool.poetry]
-name = "mai-fastapi"
+name = "mai-invoice-generator"
 version = "0.1.0"
-description = "test project"
+description = "generate invoices"
 authors = ["Admin <admin@mailinh.cc>"]
 license = "Apache License 2.0"
 readme = "README.md"
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.12"
